--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h3> scroll for more </h3>
 		<h3 class="evidence"> this is evidence!! </h3>
 		<img src="https://img.buzzfeed.com/buzzfeed-static/static/enhanced/webdr03/2013/8/16/12/anigif_original-grid-image-1002-1376668928-34.gif">
-		<img src="goofiest alien ever.gif">
+		<img src="https://media3.giphy.com/media/WqEmD7ycGVIzzNMxya/200w.gif?cid=6c09b952ogp6bmfwv9ip5jt55wqtxi1vl8hudiioeh5c0nfe&rid=200w.gif">
 		<h3> if you still don't believe me, you're just stupid, and the earth is flat!</h3>
 </body>
 
